@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/03/15
+	* Added SC_CHANGEUNDEAD to differentiate it from the other elemental change
+	  skills. It now fails on Undead/Dark elemental targets.
 	* Corrected party item share settings not being properly updated on logon.
 	* Corrected battle_attr_none setting applying to elemental attacks instead
 	  of neutral ones. [Skotlex]
